--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,10 @@
 name = Dist-Zilla-PluginBundle-BINGOS
-version = 0.18
+version = 0.20
 author = Chris Williams <chris@bingosnet.co.uk>
 license = Perl_5
 copyright_holder = Chris Williams
+
+[Bootstrap::lib]
 
 [@BINGOS]
 
@@ -18,6 +20,6 @@ Dist::Zilla::Plugin::Clean            = 0.02
 Dist::Zilla::Plugin::Test::Compile    = 1.112400
 Dist::Zilla::Plugin::GithubMeta       = 0.10
 Dist::Zilla::Plugin::PodWeaver        = 3.101641
-Dist::Zilla::Plugin::ReadmeFromPod    = 0.14
+Dist::Zilla::Plugin::ReadmeAnyFromPod = 0.14
 Dist::Zilla::Plugin::ChangelogFromGit = 0.006
 Dist::Zilla::Role::PluginBundle::PluginRemover = 0.102
